feat: add server sync with mock server

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Dynamic Quote Generator</h1>
+        <span id="info"></span>
         <select id="categoryFilter" onchange="filterQuotes()">
             <option value="all">All Categories</option>
             <!-- Dynamically populated categories -->
